--- a/backend/package.json
+++ b/backend/package.json
@@ -12,13 +12,16 @@
   "license": "ISC",
   "dependencies": {
     "cloudinary": "^1.28.1",
+    "cookie-parser": "^1.4.6",
     "cors": "^2.8.5",
     "dotenv": "^10.0.0",
     "express": "^4.17.2",
+    "express-fileupload": "^1.3.1",
     "express-jwt": "^6.1.0",
     "express-validator": "^6.14.0",
     "jsonwebtoken": "^8.5.1",
     "mongoose": "^6.1.5",
+    "multer": "^1.4.4",
     "uuid": "^8.3.2"
   },
   "devDependencies": {
