--- a/backend/package.json
+++ b/backend/package.json
@@ -30,5 +30,8 @@
     "eslint-plugin-prettier": "^3.4.0",
     "nodemon": "^2.0.12",
     "prettier": "^2.3.2"
+  },
+  "engines": {
+    "node": "16.x"
   }
 }
