--- a/frontend/.env
+++ b/frontend/.env
@@ -1,1 +1,2 @@
-REACT_APP_BACKEND = http://localhost:8000/api/
+REACT_APP_BACKEND = https://powerful-shelf-76762.herokuapp.com/api/
+# REACT_APP_BACKEND = http://localhost:8000/api/
