Created background remover app

--- a/frontend/.env
+++ b/frontend/.env
@@ -1,2 +1,4 @@
 REACT_APP_BACKEND = https://powerful-shelf-76762.herokuapp.com/api/
+REACT_APP_REMOVEBG_API = shLqPtQceYXY7XCiTVQCAisw
+
 # REACT_APP_BACKEND = http://localhost:8000/api/
